--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -17,6 +17,11 @@ historikk:
      enabled: true
    dittnav:
       enabled: false
+      topics:
+         beskjed: aapen-brukernotifikasjon-nyBeskjed-v1
+         oppgave:
+            opprett: aapen-brukernotifikasjon-nyOppgave-v1
+            avslutt: aapen-brukernotifikasjon-done-v1
    inntektsmelding:
       enabled: true
    oppslag:
