--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,34 +5,39 @@ no.nav:
       jwt.issuer.selvbetjening:
          discoveryurl: https://login.microsoftonline.com/navnob2c.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten
          cookie_name: selvbetjening-idtoken
-dokarkiv:
-   enabled: false
-   service: https://dokarkiv
-sts:
-  enabled: true           
+         
 historikk:
-   fordeling:
-      enabled: true
-   vedtak:
-     enabled: false
+   aktoer: 
+      enabled: false
    dittnav:
       enabled: false
       topics :
         beskjed: aapen-brukernotifikasjon-nyBeskjed-v1
         oppgave:
            opprett: aapen-brukernotifikasjon-nyOppgave-v1
-           avslutt: aapen-brukernotifikasjon-done-v1
+           avslutt: aapen-brukernotifikasjon-done-v1   
+   dokarkiv:
+      enabled: false
    inntektsmelding:
       enabled: true
+      topic: privat-foreldrepenger-brukerdialog-inntektsmelding   
    oppslag:
-      enabled: true
-   kafka:
-      topics:
-         fordeling: privat-foreldrepenger-historikk-fordeling
-         vedtak: privat-familie-vedtakFattet-v1
-         tilbakekreving: privat-tilbakekreving-brukerdialog-p
-         søknad: fpsoknad-mottak
-         inntektsmelding: privat-foreldrepenger-brukerdialog-inntektsmelding
+      enabled: true     
+   sts:
+      enabled: true  
+   søknad:
+      innsending:
+        enabled: true
+        topic: fpsoknad-mottak
+      fordeling:
+        enabled: true
+        topic: privat-foreldrepenger-historikk-fordeling
+   tilbakekreving:
+      enabled: false
+      topic: privat-tilbakekreving-brukerdialog-p   
+   vedtak:
+      enabled: false
+      topic: privat-familie-vedtakFattet-v1         
 info:
    app:
       version: '@project.version@'
