--- a/.github/workflows/build-and-deploy-master.yml
+++ b/.github/workflows/build-and-deploy-master.yml
@@ -54,7 +54,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           title: Bygg av ${{ env.TAG }}
           body: |
-            Kommenter med <b>/promote ${{ env.TAG }} cluster</b>, hvor <b>cluster</b> er et gyldig clusternavn
+            Kommenter med <b>/promote cluster</b>, hvor <b>cluster</b> er et gyldig clusternavn
             <table>
             <tr><th>Cluster</th></tr>
             <tr><td>dev-fss</td></tr>
@@ -72,4 +72,4 @@ jobs:
                             issue_number: ${{ steps.createdeployissue.outputs.number }} }
             github.issues.createComment({...issue,
                                     title: 'Deploy av ${{ env.TAG }}',
-                                    body: '/promote ${{ env.TAG }} ${{ env.CLUSTER }}'})
+                                    body: '/promote ${{ env.CLUSTER }}'})
