--- a/.github/workflows/build-and-deploy-master.yml
+++ b/.github/workflows/build-and-deploy-master.yml
@@ -51,6 +51,7 @@ jobs:
         uses: maxkomarychev/oction-create-issue@v0.7.1
         id: createdeployissue
         with:
+          labels : 'bygg'
           token: ${{ secrets.GITHUB_TOKEN }}
           title: Bygg av ${{ env.TAG }}
           body: |
