--- a/.github/workflows/build-and-deploy-master.yml
+++ b/.github/workflows/build-and-deploy-master.yml
@@ -13,6 +13,26 @@ jobs:
   kompiler:
     runs-on: ubuntu-latest
     steps:
+      - name: Lukk deployment-issues
+        uses: actions/github-script@0.5.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              labels: ['bygg']
+            }).then(response => {
+              response.data.forEach(issue => {
+                github.issues.update({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: issue.number,
+                  state: 'closed'
+                });
+              });
+            });
     
       - name: Sjekk ut kode
         uses: actions/checkout@v2
