--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,7 +63,7 @@ management:
 server:
    servlet:
       context-path: /api
-   use-forward-headers: true
+   forward-headers-strategy: framework
 spring:
    application:
       name: fpinfo-historikk
