--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
             <scope>test</scope>
@@ -262,7 +267,7 @@
         <dependency>
             <groupId>no.nav.foreldrepenger.kontrakter.topics</groupId>
             <artifactId>hendelse-historikk-innslag</artifactId>
-              <version>5.1-20200305094605-61b51c9</version>
+            <version>5.1-20200305094605-61b51c9</version>
         </dependency>
     </dependencies>
 </project>
