--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ no.nav:
          
 historikk:
    dittnav:
-      enabled: false
+      enabled: true
       topics :
         beskjed: aapen-brukernotifikasjon-nyBeskjed-v1
         oppgave:
