--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -26,7 +26,9 @@ spec:
       max: 2
       cpuThresholdPercentage: 50
   ingresses:
-    - {{ingress}}    
+{{#each ingresses as |url|}}
+    - {{url}}
+{{/each}} 
   resources:
       limits:
         cpu: 1500m
