--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,8 @@ historikk:
       enabled: true
       topics :
         beskjed: aapen-brukernotifikasjon-nyBeskjed-v1
-        oppgave:
-           opprett: aapen-brukernotifikasjon-nyOppgave-v1
-           avslutt: aapen-brukernotifikasjon-done-v1   
+        oppgave: aapen-brukernotifikasjon-nyOppgave-v1
+        done: aapen-brukernotifikasjon-done-v1   
    inntektsmelding:
       enabled: true
       topic: privat-foreldrepenger-brukerdialog-inntektsmelding   
