--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,9 @@ management:
    metrics:
       web:
          server:
-            auto-time-requests: true
+            request:
+              autotime:
+                 enabled: true
    endpoint:
       health:    
          show-details : never            
