--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -2,7 +2,7 @@ apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
   name: fpinfo-historikk
-  namespace: teamforeldrepenger
+  namespace: {{namespace}
   labels:
     team: teamforeldrepenger
 spec:
