--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -29,5 +29,15 @@
   {
     "name": "resilience4j",
     "description": "A description for 'resilience4j'"
+  },
+  {
+    "name": "historikk.tilbakekreving.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'historikk.tilbakekreving.enabled'"
+  },
+  {
+    "name": "historikk.tilbakekreving.topic",
+    "type": "java.lang.String",
+    "description": "A description for 'historikk.tilbakekreving.topic'"
   }
 ]}
