--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -15,6 +15,8 @@ management:
       health:
          show-details: always
 historikk:
+   oppslag:
+      uri: http://fpsoknad-oppslag/api 
    dittnav:
       enabled: true       
    tilbakekreving:
