--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,6 +67,7 @@ server:
       context-path: /api
    forward-headers-strategy: framework
 spring:
+   cloud.discovery.client.health-indicator.enabled: false
    application:
       name: fpinfo-historikk
    cache:
