--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,7 +48,7 @@ management:
    health :
       livenessstate:
         enabled: true
-      readynessstate:
+      readinessstate:
         enabled: true
       refresh:
          enabled: false
