--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -59,7 +59,9 @@ jobs:
       with:
           java-version: 14     
 
-    - run: |
+    - name: Build
+      shell: bash
+      run: |
         mvn clean install --batch-mode --quiet  --settings .github/workflows/.m2/settings.xml
       env:
          GITHUB_USERNAME: x-access-token
