--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -4,8 +4,8 @@ no.nav:
     jwt:
       issuer:
         selvbetjening:
-           discoveryUrl: https://login.microsoftonline.com/NAVtestB2C.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten_ver1
-
+          discoveryurl: ${loginservice.idporten.discovery.url}
+          accepted_audience: ${loginservice.idporten.audience}
 management:
    endpoints:
       web:
