--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,13 +2,13 @@ name: Deployment pipeline dev
 
 on:
   push:
-    branches: 
+    branches:
       - master
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   CLUSTER: dev-fss
   IMAGE_BASE: docker.pkg.github.com/${{ github.repository }}/fpinfo-historikk
-  
+
 jobs:
   kompiler:
     runs-on: ubuntu-latest
@@ -33,43 +33,43 @@ jobs:
                 });
               });
             });
-    
+
       - name: Sjekk ut kode
         uses: actions/checkout@v2
-     
-      - name: Hent tag    
-        run: | 
+
+      - name: Hent tag
+        run: |
           echo 'TAG<<EOF' >> $GITHUB_ENV
           git log -1 --pretty=%ad --date=format:%Y%m%d%H%M%S-`echo $GITHUB_SHA | cut -c1-7`  >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
-             
+
       - name: Hent Maven cache
         uses: actions/cache@v2
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
-  
-      - name: Sett opp Java 14      
+
+      - name: Sett opp Java 14
         uses: actions/setup-java@v1
         with:
           java-version: 14
-    
+
       - name: Kompiler
-        run: | 
+        run: |
           mvn versions:set -DnewVersion=${TAG}
-          echo "::set-env name=IMAGE::$IMAGE_BASE:$TAG" 
+          echo "IMAGE::$IMAGE_BASE:$TAG" >> $GITHUB_ENV
           mvn clean install --batch-mode --quiet  --settings .github/workflows/.m2/settings.xml
         env:
            GITHUB_USERNAME: x-access-token
            GITHUB_PASSWORD: ${{ secrets.NOTIFICATION }}
-                   
-      - name: Bygg, tag og push Docker image  
+
+      - name: Bygg, tag og push Docker image
         run: |
           docker build --tag ${IMAGE} --tag ${IMAGE_BASE}:latest .
           echo  ${GITHUB_TOKEN} | docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} --password-stdin
-          docker push ${IMAGE_BASE}   
-    
+          docker push ${IMAGE_BASE}
+
       - name: Lukk gamle bygg-issues
         uses: actions/github-script@v3
         with:
@@ -89,8 +89,8 @@ jobs:
                   state: 'closed'
                 });
               });
-            });     
-      
+            });
+
       - name: Opprett issue, trigg deploy til dev-fss
         if: success()
         uses: actions/github-script@v3
