--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -15,7 +15,7 @@ jobs:
        
       - name: Sett variabler for cluster og tag
         run: |
-         echo ${{ github.event.client_payload.github.slash_command }} 
+         echo ${{ github.event.client_payload }} 
          echo 'TAG<<EOF' >> $GITHUB_ENV
          echo ${{ github.event.client_payload.github.payload.issue.title }} | awk '{print $NF}' | awk -F- '{print $NF}'   >> $GITHUB_ENV
          echo 'EOF' >> $GITHUB_ENV
