--- a/.github/workflows/promote-command.yml
+++ b/.github/workflows/promote-command.yml
@@ -15,7 +15,6 @@ jobs:
        
       - name: Sett variabler for cluster og tag
         run: |
-         echo ${{ github.event.client_payload }} 
          echo 'TAG<<EOF' >> $GITHUB_ENV
          echo ${{ github.event.client_payload.github.payload.issue.title }} | awk '{print $NF}' | awk -F- '{print $NF}'   >> $GITHUB_ENV
          echo 'EOF' >> $GITHUB_ENV
@@ -24,7 +23,7 @@ jobs:
          echo ${{ github.event.client_payload.github.payload.issue.title }} | awk '{print $NF}'   >> $GITHUB_ENV
          echo 'EOF' >> $GITHUB_ENV
                
-         echo "CLUSTER=${{github.event.client_payload.slash_command.arg1}}" >> $GITHUB_ENV
+         echo "CLUSTER=${{github.event.client_payload.slash_command.unnamed.arg1}}" >> $GITHUB_ENV
      
       - name: Sett variabel for image
         run: echo IMAGE=$IMAGE_BASE:$NAME >> $GITHUB_ENV
