--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,7 @@
         <dependency>
             <groupId>no.nav.foreldrepenger</groupId>
             <artifactId>boot-conditionals</artifactId>
-            <version>1.0.20200812131740-8ef0a05</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
