--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.3.7.RELEASE</version>
         <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -20,7 +20,6 @@
     </licenses>
 
     <properties>
-        <nimbus-jose-jwt.version>8.20</nimbus-jose-jwt.version>
         <confluent.version>6.0.1</confluent.version>
         <token-validation-version>1.3.2</token-validation-version>
         <springfox.version>3.0.0</springfox.version>
@@ -108,7 +107,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-vault-dependencies</artifactId>
-                <version>3.0.0</version>
+                <version>2.2.6.RELEASE</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
