--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,9 +66,10 @@ jobs:
 
       - name: Bygg, tag og push Docker image
         run: |
-          docker build --tag ${IMAGE} --tag ${IMAGE_BASE}:latest .
+          docker build --tag ${IMAGE_BASE}:${TAG} --tag ${IMAGE_BASE}:latest .
           echo  ${GITHUB_TOKEN} | docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} --password-stdin
-          docker push ${IMAGE_BASE}
+          docker push ${IMAGE_BASE}:${TAG}
+          docker push ${IMAGE_BASE}:latest
 
       - name: Lukk gamle bygg-issues
         uses: actions/github-script@v3
