--- a/.github/workflows/build-pr-or-branch.yml
+++ b/.github/workflows/build-pr-or-branch.yml
@@ -26,9 +26,11 @@ jobs:
           restore-keys: ${{ runner.os }}-maven-
   
       - name: Sett opp Java 15      
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: 15
+          distribution: 'adopt'
+
     
       - name: Kompiler
         run: | 
