--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,115 +1,92 @@
-name: Deployment pipeline dev
+name: Bygg og deploy
 
 on:
-  push:
-    branches:
-      - master
+    push:
+        branches:
+            - master    # Push events on master branch
 env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  CLUSTER: dev-fss
-  IMAGE_BASE: docker.pkg.github.com/${{ github.repository }}/fpinfo-historikk
+    IMAGE_BASE: ghcr.io/${{ github.repository }}
 
 jobs:
-  kompiler:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Lukk deployment-issues
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: ['bygg']
-            }).then(response => {
-              response.data.forEach(issue => {
-                github.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  state: 'closed'
-                });
-              });
-            });
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - name: Hent tag
+              run: |
+                  echo "TAG=$(date +%Y.%m.%d.%H%M%S)-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
 
-      - name: Sjekk ut kode
-        uses: actions/checkout@v2
+            - name: Set cache key
+              run: |
+                  echo "CACHE_KEY=$(expr $(date +%V) - 1 + 1)" >> $GITHUB_ENV
+                  echo "PREVIOUS_CACHE_KEY=$(expr $(date +%V) - 1)" >> $GITHUB_ENV
 
-      - name: Hent tag
-        run: |
-          echo 'TAG<<EOF' >> $GITHUB_ENV
-          git log -1 --pretty=%ad --date=format:%Y%m%d%H%M%S-`echo $GITHUB_SHA | cut -c1-7`  >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
+            - name: Henter maven avhengigheter som er cachet
+              uses: actions/cache@v2.1.4
+              with:
+                  path: ~/.m2
+                  key: ${{ runner.os }}-maven-${{ env.CACHE_KEY }}
+                  restore-keys: |
+                      ${{ runner.os }}-maven-${{ env.PREVIOUS_CACHE_KEY }}
 
-      - name: Hent Maven cache
-        uses: actions/cache@v2.1.4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
+            - uses: actions/setup-java@v2
+              with:
+                  distribution: 'adopt'
+                  java-version: 15
 
-      - name: Sett opp Java 15
-        uses: actions/setup-java@v2
-        with:
-          java-version: 15
-          distribution: 'adopt'
+            - name: Kompiler
+              run: |
+                  mvn versions:set -DnewVersion=${TAG}
+                  mvn clean install --batch-mode --quiet --settings .github/.m2/settings.xml
+              env:
+                  GITHUB_USERNAME: x-access-token
+                  GITHUB_TOKEN: ${{ secrets.NOTIFICATION }} # Må ha denne fordi vi henter artifakt fra fp-felles.
 
+            - name: Log into ghcr registry
+              run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u x-access-token --password-stdin
 
-      - name: Kompiler
-        run: |
-          mvn versions:set -DnewVersion=${TAG}
-          echo "IMAGE=$IMAGE_BASE:$TAG" >> $GITHUB_ENV
-          mvn clean install --batch-mode --quiet  --settings .github/workflows/.m2/settings.xml
-        env:
-           GITHUB_USERNAME: x-access-token
-           GITHUB_PASSWORD: ${{ secrets.NOTIFICATION }}
+            - name: Bygg, tag og push Docker image
+              run: |
+                  docker build --pull --tag ${IMAGE_BASE}:${TAG} --tag ${IMAGE_BASE}:latest .
+                  docker push ${IMAGE_BASE} --all-tags
 
-      - name: Bygg, tag og push Docker image
-        run: |
-          docker build --tag ${IMAGE_BASE}:${TAG} --tag ${IMAGE_BASE}:latest .
-          echo  ${GITHUB_TOKEN} | docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} --password-stdin
-          docker push ${IMAGE_BASE}:${TAG}
-          docker push ${IMAGE_BASE}:latest
+            - name: Lukk gamle bygg-issues
+              uses: actions/github-script@v3
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  script: |
+                      github.issues.listForRepo({
+                        owner: context.repo.owner,
+                        repo: context.repo.repo,
+                        state: 'open',
+                        labels: ['bygg']
+                      }).then(response => {
+                        response.data.forEach(issue => {
+                          github.issues.update({
+                            owner: context.repo.owner,
+                            repo: context.repo.repo,
+                            issue_number: issue.number,
+                            state: 'closed'
+                          });
+                        });
+                      });
 
-      - name: Lukk gamle bygg-issues
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: ['bygg']
-            }).then(response => {
-              response.data.forEach(issue => {
-                github.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  state: 'closed'
-                });
-              });
-            });
-
-      - name: Opprett issue, trigg deploy til dev-fss
-        if: success()
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{secrets.NOTIFICATION}}
-          script: |
-              github.issues.create( {
-                owner: context.issue.owner,
-                repo: context.issue.repo,
-                labels: ['bygg'],
-                title: 'Deploy av ${{ env.TAG }}'})
-              .then(response => {
-                      const issue = { owner: context.issue.owner,
+            - name: Opprett issue, trigg deploy til dev-fss
+              if: success()
+              uses: actions/github-script@v3
+              with:
+                github-token: ${{secrets.NOTIFICATION}}
+                script: |
+                    github.issues.create( {
+                      owner: context.issue.owner,
                       repo: context.issue.repo,
-                      issue_number: response.data.number }
-                     github.issues.createComment({...issue,
-                            title: 'Deploy av ${{ env.TAG }}',
-                            body: '/promote dev-fss '})
-               });
+                      labels: ['bygg'],
+                      title: 'Deploy av ${{ env.TAG }}'})
+                    .then(response => {
+                            const issue = { owner: context.issue.owner,
+                            repo: context.issue.repo,
+                            issue_number: response.data.number }
+                           github.issues.createComment({...issue,
+                                  title: 'Deploy av ${{ env.TAG }}',
+                                  body: '/promote dev-fss '})
+                     });
