--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -39,5 +39,15 @@
     "name": "historikk.tilbakekreving.topic",
     "type": "java.lang.String",
     "description": "A description for 'historikk.tilbakekreving.topic'"
+  },
+  {
+    "name": "no.nav.security.jwt.client.registration.fpsoknad-mottak.well-known-url",
+    "type": "java.lang.String",
+    "description": "A description for 'no.nav.security.jwt.client.registration.fpsoknad-mottak.well-known-url'"
+  },
+  {
+    "name": "no.nav.security.jwt.client.registration.fpsoknad-mottak.authentication.client-id",
+    "type": "java.lang.String",
+    "description": "A description for 'no.nav.security.jwt.client.registration.fpsoknad-mottak.authentication.client-id'"
   }
 ]}
