--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,15 @@ http:
 no.nav:
    security:
      jwt:
+       client:
+          registration:
+              fpsoknad-mottak:
+                 well-known-url: ${token.x.well.known.url}
+                 grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+                 authentication:
+                      client-id: ${token.x.client.id}
+                      client-jwk: ${token.x.private.jwk}
+                      client-auth-method: private_key_jwt
        issuer:
          selvbetjening:
             discoveryurl: ${loginservice.idporten.discovery.url}
