support multiple issuers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,10 +13,12 @@ no.nav:
                       client-jwk: ${token.x.private.jwk}
                       client-auth-method: private_key_jwt
        issuer:
-         selvbetjening:
+          tokenx:
+             discoveryurl: ${token.x.well.known.url} 
+             accepted_audience: ${token.x.client.id}
+          selvbetjening:
             discoveryurl: ${loginservice.idporten.discovery.url}
             accepted_audience: ${loginservice.idporten.audience}  
-            cookie_name: selvbetjening-idtoken
          
 historikk:
    dittnav:
