--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        mvn clean install --batch-mode --quiet  --settings .github/workflows/.m2/settings.xml
+        mvn clean install --batch-mode --quiet  --settings .github/.m2/settings.xml
       env:
          GITHUB_USERNAME: x-access-token
          GITHUB_PASSWORD: ${{ secrets.NOTIFICATION }}
