--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,12 +14,12 @@ no.nav:
                       client-auth-method: private_key_jwt
        issuer:
           tokenx:
-             discoveryurl: ${token.x.well.known.url} 
-             accepted_audience: ${token.x.client.id}
+             discovery-url: ${token.x.well.known.url}
+             accepted-audience: ${token.x.client.id}
           selvbetjening:
-            discoveryurl: ${loginservice.idporten.discovery.url}
-            accepted_audience: ${loginservice.idporten.audience}  
-         
+             discovery-url: ${loginservice.idporten.discovery.url}
+             accepted-audience: ${loginservice.idporten.audience}
+
 historikk:
    dittnav:
       enabled: true
