--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ no.nav:
           tokenx:
              discovery-url: ${token.x.well.known.url}
              accepted-audience: ${token.x.client.id}
+             proxy-url: http://webproxy.nais:8088
           selvbetjening:
              discovery-url: ${loginservice.idporten.discovery.url}
              accepted-audience: ${loginservice.idporten.audience}
