--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ no.nav:
               fpsoknad-mottak:
                  well-known-url: ${token.x.well.known.url}
                  grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+                 token-exchange:
+                      audience: prod-fss:teamforeldrepenger:fpsoknad-oppslag
                  authentication:
                       client-id: ${token.x.client.id}
                       client-jwk: ${token.x.private.jwk}
