--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ no.nav:
                  well-known-url: ${token.x.well.known.url}
                  grant-type: urn:ietf:params:oauth:grant-type:token-exchange
                  token-exchange:
-                      audience: prod-fss:teamforeldrepenger:fpsoknad-oppslag
+                      audience: prod-fss:teamforeldrepenger:fpsoknad-mottak
                  authentication:
                       client-id: ${token.x.client.id}
                       client-jwk: ${token.x.private.jwk}
