--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
                   mvn clean install --batch-mode --quiet --settings .github/.m2/settings.xml
               env:
                   GITHUB_USERNAME: x-access-token
-                  GITHUB_PASSWORD: ${{ secrets.NOTIFICATION }} # Må ha denne fordi vi henter artifakt fra andre repo hos Nav.
+                  GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }} # Må ha denne fordi vi henter artifakt fra andre repo hos Nav.
 
             - name: Log into ghcr registry
               run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u x-access-token --password-stdin
@@ -75,7 +75,7 @@ jobs:
               if: success()
               uses: actions/github-script@v4.0.2
               with:
-                github-token: ${{secrets.NOTIFICATION}}
+                github-token: ${{secrets.GITHUB_TOKEN}}
                 script: |
                     github.issues.create( {
                       owner: context.issue.owner,
