--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
             <id>confluent</id>
             <url>https://packages.confluent.io/maven/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
     <build>
         <resources>
@@ -135,7 +139,7 @@
             <version>${confluent.version}</version>
         </dependency>
         <dependency>
-            <groupId>no.nav</groupId>
+            <groupId>com.github.navikt</groupId>
             <artifactId>brukernotifikasjon-schemas</artifactId>
             <version>1.2021.01.18-11.12-b9c8c40b98d1</version>
         </dependency>
