--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,8 @@
          <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
+                            <version>3.0.3</version>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
