--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -12,12 +12,12 @@ jobs:
             - name: Sjekk ut kode
               uses: actions/checkout@v2
 
-            - name: Hent Maven cache
-              uses: actions/cache@v2.1.6
-              with:
-                  path: ~/.m2/repository
-                  key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-                  restore-keys: ${{ runner.os }}-maven-
+#             - name: Hent Maven cache
+#               uses: actions/cache@v2.1.6
+#               with:
+#                   path: ~/.m2/repository
+#                   key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+#                   restore-keys: ${{ runner.os }}-maven-
 
             - name: Sett opp Java 15
               uses: actions/setup-java@v2
@@ -30,4 +30,4 @@ jobs:
                   mvn package  --settings .github/.m2/settings.xml
               env:
                   GITHUB_USERNAME: x-access-token
-                  GITHUB_PASSWORD: ${{ secrets.NOTIFICATION }}
+                  GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
