--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -35,11 +35,12 @@ jobs:
     # the head of the pull request instead of the merge commit.
     - run: git checkout HEAD
       if: ${{ github.event_name == 'pull_request' }}
-    
-    - name: Sett opp Java 15      
-      uses: actions/setup-java@v1
+
+    - name: Set up JDK 15
+      uses: actions/setup-java@v2
       with:
-          java-version: 15 
+          distribution: 'adopt'
+          java-version: '15'
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
