--- a/.deploy/naiserator.yaml
+++ b/.deploy/naiserator.yaml
@@ -21,28 +21,29 @@ spec:
   replicas:
       min: 2
       max: 2
-      cpuThresholdPercentage: 50  
+      cpuThresholdPercentage: 50
   liveness:
       path: api/actuator/health/liveness
       initialDelay: 60
   readiness:
       path: api/actuator/health/readiness
-      initialDelay: 60  
+      initialDelay: 60
   prometheus:
       enabled: true
       path: api/actuator/prometheus
-  replicas:
-      min: 2
-      max: 2
-      cpuThresholdPercentage: 50
   ingresses:
 {{#each ingresses as |url|}}
     - {{url}}
-{{/each}} 
+{{/each}}
+  env:
+{{#each env}}
+    - name: {{@key}}
+      value: "{{this}}"
+{{/each}}
   resources:
       limits:
         cpu: 1500m
         memory: 3072Mi
       requests:
         cpu: 250m
-        memory: 1536Mi 
+        memory: 1536Mi
