--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,10 +75,17 @@ jobs:
                         title: 'Deploy av ${{ env.TAG }}',
                         body: '${{ github.sha }}'})
       
+      
+            - uses: navikt/github-app-token-generator@v1
+              id: get-token
+              with:
+                  private-key: ${{ secrets.FP_PRIVATE_KEY }}
+                  app-id: ${{ secrets.FP_APP_ID }}
+      
             - name: Trigg deploy til dev-fss
               if: success()
               run: |
-                   curl -XPOST -u "x-access-token:${{ secrets.GITHUB_TOKEN }}" \
+                   curl -XPOST -u "x-access-token:${{ steps.get-token.outputs.token }}" \
                    -H "Accept: application/vnd.github.v3+json" \
                    https://api.github.com/repos/${{ github.repository }}/dispatches \
                    -d '{
