--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
     </licenses>
 
     <properties>
+        <sonar.projectKey>navikt_fpinfo-historikk</sonar.projectKey>
+        <sonar.organization>navit</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <confluent.version>6.2.0</confluent.version>
         <token-validation-version>1.3.8</token-validation-version>
         <springfox.version>3.0.0</springfox.version>
@@ -65,9 +68,9 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>test</phase>
+                        <phase>verify</phase>
                         <goals>
-                            <goal>report</goal>
+                            <goal>report-aggregate</goal>
                         </goals>
                     </execution>
                 </executions>
