--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -36,10 +36,10 @@ jobs:
             - run: git checkout HEAD
               if: ${{ github.event_name == 'pull_request' }}
 
-            - name: Set up JDK 15
+            - name: Set up JDK 17
               uses: actions/setup-java@v2
               with:
-                  distribution: 'adopt'
+                  distribution: 'temurin'
                   java-version: '15'
                   cache: 'maven'
 
