Flytter kubeernetes.role ut til bootstrap.yml

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,3 +4,5 @@ spring:
          enabled: true
          uri: https://vault.adeo.no
          authentication: KUBERNETES
+         kubernetes:
+             role: fpinfo-historikk
