Aktiverer vault i dev-fss og prod-fss, deaktivere dem ellers

--- a/src/main/resources/bootstrap-prod-fss.yml
+++ b/src/main/resources/bootstrap-prod-fss.yml
@@ -1,11 +1,15 @@
 spring:
    cloud:
       vault:
+         enabled: true
+         uri: https://vault.adeo.no
          database:
             enabled: true
             role: fpinfo-historikk-prod-admin
             backend: postgresql/prod-fss
+         authentication: KUBERNETES
          kubernetes:
+            role: fpinfo-historikk
             kubernetes-path: kubernetes/prod/fss
          kv:
             enabled: true
