--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,8 +1,4 @@
 spring:
    cloud:
       vault:
-         enabled: true
-         uri: https://vault.adeo.no
-         authentication: KUBERNETES
-         kubernetes:
-             role: fpinfo-historikk
+         enabled: false
