--- a/src/main/resources/bootstrap-dev-fss.yml
+++ b/src/main/resources/bootstrap-dev-fss.yml
@@ -1,11 +1,15 @@
 spring:
    cloud:
       vault:
+         enabled: true
+         uri: https://vault.adeo.no
          database:
             enabled: true
             role: fpinfo-historikk-preprod-admin
             backend: postgresql/preprod-fss
+         authentication: KUBERNETES
          kubernetes:
+            role: fpinfo-historikk
             kubernetes-path: kubernetes/preprod/fss
          kv:
             enabled: true
