--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,4 +1,18 @@
 spring:
    cloud:
       vault:
-         enabled: false
+         enabled: true
+         uri: https://vault.adeo.no
+         database:
+            enabled: true
+            role: fpinfo-historikk-prod-admin
+            backend: postgresql/prod-fss
+         authentication: KUBERNETES
+         kubernetes:
+            role: fpinfo-historikk
+            kubernetes-path: kubernetes/prod/fss
+         kv:
+            enabled: true
+            backend: kv/prod/fss
+            application-name: fpinfo-historikk/teamforeldrepenger
+            default-context: fpinfo-historikk/teamforeldrepenger
