Prøver med spring-cloud-starter-vault-config og profil based bootstrap

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,6 +73,8 @@ spring:
       caffeine:
          spec: maximumSize=100,expireAfterAccess=3600s
    cloud:
+      bootstrap:
+         enable: true
       discovery:
          client:
             health-indicator:
