Legger til default profil for kjøring lokalt

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
     profiles:
-        active: ${nais.cluster.name}
+        active: ${nais.cluster.name-:local}
     cloud:
         vault:
             enabled: true
