--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 no.nav:
   security:
     jwt:
+      dont-propagate-bearertoken: true
       client:
         registration:
           fpsoknad-mottak:
