--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,13 @@
         <sonar.projectKey>navikt_fpinfo-historikk</sonar.projectKey>
         <sonar.organization>navit</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <confluent.version>6.2.0</confluent.version>
-        <token-validation-version>1.3.19</token-validation-version>
-        <springdoc.version>1.6.6</springdoc.version>
-        <spring-cloud.version>3.0.5</spring-cloud.version>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+        <confluent.version>6.2.0</confluent.version>
+        <token-validation-version>2.0.11</token-validation-version>
+        <springdoc.version>1.6.6</springdoc.version>
+        <spring-cloud.version>3.0.5</spring-cloud.version>
+        <mottak-felles.version>0.5.5</mottak-felles.version>
     </properties>
     <scm>
         <connection>scm:git:https://github.com/navikt/fpinfo-historikk.git</connection>
@@ -237,6 +238,11 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
+            <groupId>no.nav.foreldrepenger</groupId>
+            <artifactId>fpsoknad-felles</artifactId>
+            <version>${mottak-felles.version}</version>
+        </dependency>
+        <dependency>
             <groupId>no.nav.security</groupId>
             <artifactId>token-validation-spring</artifactId>
             <version>${token-validation-version}</version>
@@ -245,12 +251,6 @@
             <groupId>no.nav.security</groupId>
             <artifactId>token-client-spring</artifactId>
             <version>${token-validation-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>no.nav.security</groupId>
-            <artifactId>token-validation-test-support</artifactId>
-            <version>${token-validation-version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
