Legger til transactional-id-prefix for onprem producer (bruker hostname)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -118,6 +118,7 @@ kafka:
     bootstrap-servers: a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443
     consumer-group-id: group_id
     auto-offset-reset: none
+    transactional-id-prefix: ${hostname}
 springdoc:
   packages-to-scan: no.nav.foreldrepenger.historikk
   swagger-ui:
